# serial-brain-rs

./: .gitignore  .windsurfrules  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-record-stream/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-record-stream/android/: build.gradle.kts  local.properties
tauri-plugin-record-stream/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-record-stream/android/src/main/: AndroidManifest.xml
tauri-plugin-record-stream/android/src/main/java/: Example.kt  ExamplePlugin.kt  RecordStream.kt  RecordStreamPlugin.kt  TauriRecordStreamPlugin.kt
tauri-plugin-record-stream/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-record-stream/examples/tauri-app/: package.json
tauri-plugin-record-stream/examples/tauri-app/src/: App.svelte
tauri-plugin-record-stream/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-record-stream/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-record-stream/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-record-stream/guest-js/: index.ts
tauri-plugin-record-stream/permissions/: default.toml
tauri-plugin-record-stream/permissions/autogenerated/: reference.md
tauri-plugin-record-stream/permissions/autogenerated/commands/: configure_record.toml  push_frame.toml  start_record.toml  stop_record.toml
tauri-plugin-record-stream/permissions/schemas/: schema.json
tauri-plugin-record-stream/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+127 files in other folders)
