[package]
name = "tauri-plugin-record-stream"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-record-stream"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
opencv = { version = "0.94.4", default-features = false, features = [
  "clang-runtime",   # (optional) bundles libclang, handy on Windows/macOS
  "imgcodecs",
  "videoio"
] }
# once_cell      = "1"
# anyhow         = "1"
[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
